2025-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Use r-ci with embedded bootstrap
	* .github/workflows/alpine.yaml: Switch to release 3.22

2025-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.24
	* configure.ac: Idem
	* configure: Idem

	* src/init.c: Set EnumValueDescriptor_name declaration to two args

2025-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/rprotobuf.h: Replace EXTPTR_PTR with R_ExternalPtrAddr
	* src/rprotobuf.cpp: Idem
	* src/mutators.cpp: Idem

2025-02-10  Mike Kruskal  <mkruskal@google.com>

	* R/00classes.R: Point to EnumValueDescriptor
	* src/init.c: Add bindings for EnumValueDescriptor::name

2025-01-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.4.23
	* configure.ac: Idem
	* configure: Idem

	* inst/NEWS.Rd: Update one URL

2025-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* configure.ac: Correct three possible bashisms
	* configure: Regenerated

2024-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2024-11-11  Lev Kandel  <lmakhlis@google.com>

	* src/DescriptorPoolLookup.cpp: Compatibility with protobuf >= 6.30.0
	* src/DescriptorPoolLookup.h: Idem
	* src/mutators.cpp: Idem
	* src/rprotobuf.cpp: Idem
	* src/rprotobuf.h: Idem
	* src/wrapper_Descriptor.cpp: Idem
	* src/wrapper_EnumDescriptor.cpp: Idem
	* src/wrapper_EnumValueDescriptor.cpp: Idem
	* src/wrapper_FieldDescriptor.cpp: Idem
	* src/wrapper_FileDescriptor.cpp: Idem
	* src/wrapper_Message.cpp: Idem
	* src/wrapper_MethodDescriptor.cpp: Idem
	* src/wrapper_ServiceDescriptor.cpp: Idem

2024-11-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-07-03  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date

2024-07-02  Matteo Gianella  <matteo.gianella@polimi.it>

	* src/RWarningErrorCollector.h: Code update also in case of protobuf
	version >= 26.x